--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,11 +49,14 @@ bind / command-prompt "splitw 'exec ri -T %% | less'"
 
 #-- statusbar --#
 
-set -g status-right "#[fg=green]#(/home/xiaodong/bin/uptime)#[default] • #[fg=green]#(cut -d ' ' -f 1-3 /proc/loadavg)#[default]"
-set -g status-right-attr bright
+set -g status-left-length 32
+set -g status-left "#[fg=yellow][#(whoami)@#(hostname)]  "
+set -g status-right "#[default]#[fg=yellow][%Y-%m-%d %H:%M] • #[fg=magenta]#(cut -d ' ' -f 1-3 /proc/loadavg)#[default]"
+
+set -g status-left-attr bright
 
 set -g status-bg black
-set -g status-fg yellow
+set -g status-fg cyan
 
 setw -g window-status-current-attr bright
 #setw -g window-status-current-bg red
