--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,6 +47,9 @@ bind * command-prompt "splitw 'exec perldoc -t -v %%'"
 bind % command-prompt "splitw 'exec perldoc -t %%'"
 bind / command-prompt "splitw 'exec ri -T %% | less'"
 
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
+
 #-- statusbar --#
 
 set -g status-left-length 32
