--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,7 +53,7 @@ bind-key -n C-S-Right swap-window -t +1
 #-- statusbar --#
 
 set -g status-left-length 32
-set -g status-left "#[fg=yellow][#(whoami)@#(hostname)]  "
+set -g status-left "#[fg=yellow][#(whoami)@#(hostname)] [#S]  "
 set -g status-right "#[default]#[fg=yellow][%Y-%m-%d %H:%M] • #[fg=magenta]#(cut -d ' ' -f 1-3 /proc/loadavg)#[default]"
 
 set -g status-left-attr bright
