Highlight current tab

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -71,6 +71,8 @@ setw -g automatic-rename off
 set -g status-keys vi
 setw -g mode-keys vi
 
+setw -g window-status-current-style fg=colour3,bg=colour8
+
 #-- apps --#
 
 # new -s work vim
