--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -61,7 +61,9 @@ set -g status-fg cyan
 
 
 #set -g status-utf8 on
-set -g status-interval 1
+set -g status-interval 2
+set -g automatic-rename on
+set -g automatic-rename-format '#{pane_current_command}'
 
 #set -g visual-activity on
 #setw -g monitor-activity on
@@ -72,6 +74,10 @@ set -g status-keys vi
 setw -g mode-keys vi
 
 setw -g window-status-current-style fg=colour3,bg=colour8
+
+set -g set-titles on
+set -g set-titles-string "#{USER}@#H: #{pane_current_command}"
+
 
 #-- apps --#
 
